--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,73 @@
-django
-gunicorn
-django-heroku
+absl-py==0.8.1
+astor==0.8.1
+astroid==2.3.2
+cachetools==3.1.1
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+cycler==0.10.0
+Cython==0.29.14
+dj-database-url==0.5.0
+Django==2.2.7
+django-heroku==0.3.1
+Flask==1.1.1
+gast==0.2.2
+google-auth==1.8.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
+grpcio==1.25.0
+gunicorn==20.0.4
+h5py==2.10.0
+idna==2.8
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.3
+joblib==0.14.0
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+Markdown==3.1.1
+MarkupSafe==1.1.1
+matplotlib==3.1.2
+mccabe==0.6.1
+numpy==1.17.4
+oauthlib==3.1.0
+opt-einsum==3.1.0
+pandas==0.25.3
+pathlib==1.0.1
+patsy==0.5.1
+pmdarima==1.5.1
+protobuf==3.11.1
+psycopg2==2.8.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pylint==2.4.3
+pylint-django==2.0.12
+pylint-plugin-utils==0.6
+pyparsing==2.4.5
+python-dateutil==2.8.1
+python-decouple==3.3
+pytz==2019.3
+PyYAML==5.2
+requests==2.22.0
+requests-oauthlib==1.3.0
+rsa==4.0
+scikit-learn==0.22
+scipy==1.3.3
+six==1.12.0
+SQLAlchemy==1.3.11
+sqlparse==0.3.0
+statsmodels==0.10.2
+tensorboard==1.15.0
+tensorflow==1.15.0
+tensorflow-estimator==1.15.1
+termcolor==1.1.0
+TFANN==1.0.1
+typed-ast==1.4.0
+urllib3==1.25.7
+Werkzeug==0.16.0
+whitenoise==5.0.1
+wrapt==1.11.2
