--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==0.8.1
+asgiref==3.2.3
 astor==0.8.1
 astroid==2.3.2
 cachetools==3.1.1
@@ -61,9 +62,9 @@ six==1.12.0
 SQLAlchemy==1.3.11
 sqlparse==0.3.0
 statsmodels==0.10.2
-tensorboard==1.15.0
-tensorflow==1.15.0
-tensorflow-estimator==1.15.1
+tensorboard==2.0.2
+tensorflow==2.0.0
+tensorflow-estimator==2.0.1
 termcolor==1.1.0
 TFANN==1.0.1
 typed-ast==1.4.0
